--- a/frontend/src/components/ChatElements/ChatMessage.scss
+++ b/frontend/src/components/ChatElements/ChatMessage.scss
@@ -1,11 +1,13 @@
 @import "../../global";
 
 .cb-chat-message {
-	margin: 2.5px 0;
+	margin: 12.5px 0;
 	padding: 10px;
 	border-radius: 5px;
 	max-width: 75%;
-
+	transition: transform 300ms cubic-bezier(0.06, 0.88, 0.36, 1);
+	word-break: break-word;
+	display: inline-block;
 	@include shadow-2;
 
 	&.cb-chat-message--right {
@@ -14,24 +16,13 @@
 		border-bottom-right-radius: 0px;
 		background-color: $color--blue;
 		color: $color--dark;
-
-		& + .cb-chat-message--left {
-			margin-top: 12.5px;
-		}
+		transform-origin: bottom right;
 	}
 
 	&.cb-chat-message--left {
 		margin-right: auto;
-		text-align: right;
 		border-bottom-left-radius: 0;
 		background-color: $color--dark-lighter;
-
-		& + .cb-chat-message--right {
-			margin-top: 12.5px;
-		}
-	}
-
-	span {
-		word-break: break-all;
+		transform-origin: bottom left;
 	}
 }
