--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -26,3 +26,13 @@ $color--blue-light: lighten($color--blue, 5%);
 @mixin shadow-5 {
 	box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
+@mixin chat-message {
+	overflow: hidden;
+	margin: 12.5px 0;
+	padding: 10px;
+	border-radius: 5px;
+	transition: transform 300ms cubic-bezier(0.06, 0.88, 0.36, 1);
+	display: inline-block;
+	background-color: $color--dark-lighter;
+	@include shadow-2;
+}
